Closed Bug 1395524 Opened 6 years ago Closed 6 years ago

Child processes fail to start while the profiler is active in the parent process with a fractional sampling interval if the system locale's decimal separator is a comma

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- wontfix
firefox57 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: regression)

Attachments

(2 files)

STR:
 1. Set your system locale to French or German.
 2. Set the Gecko profiler add-on's sampling interval to 0.9ms.
 3. Close all tabs except one.
 4. Grab a profile. The perf-html.io tab that opens creates a new process.

Actual results:
The perf-html.io tab that opens immediately "crashes".
OS: Unspecified → All
Hardware: Unspecified → All
Summary: Child processes fail to start while the profiler is active in the parent process with a fractional sampling interval and the system locale's decimal separator is a comma → Child processes fail to start while the profiler is active in the parent process with a fractional sampling interval if the system locale's decimal separator is a comma
Comment on attachment 8903120 [details]
Bug 1395524 - Add profiler log messages for invalid startup profiling env vars.

https://reviewboard.mozilla.org/r/174918/#review180244
Attachment #8903120 - Flags: review?(n.nethercote) → review+
Comment on attachment 8903121 [details]
Bug 1395524 - Use AppendFloat when converting the float interval to the env var string.

https://reviewboard.mozilla.org/r/174920/#review180250
Attachment #8903121 - Flags: review?(n.nethercote) → review+
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/28d54da51af5
Add profiler log messages for invalid startup profiling env vars. r=njn
https://hg.mozilla.org/integration/autoland/rev/3f011ef04279
Use AppendFloat when converting the float interval to the env var string. r=njn
You need to log in before you can comment on or make changes to this bug.