Bug 1395524 - Add profiler log messages for invalid startup profiling env vars. r=njn

MozReview-Commit-ID: ipWVT6Jh3j